2014-06-27  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init): Add default keybindings for Cut,
	PrevWord and NextWord in the prompt input lines; the code for those
	special operations already exists, just the shortcuts were missing.
	* src/rcfile.c (parse_binding): When binding keys, only allow those
	menus where the bound function is actually present.  This reduces
	the meaning of 'all' to "all menus where the function exists".
	* src/rcfile.c (is_universal): New function, returning TRUE for the
	functions that are present in most menus but only listed in MMAIN.
	* doc/man/nanorc.5, doc/texinfo/nano.texi: Update the docs for this.
	* prompt.c (find_statusbar_bracket_match, do_statusbar_find_bracket):
	Remove these functions and thus the ability to search for a matching
	bracket in a prompt input line.  The find_bracket function never had
	a default keybinding outside MMAIN, so is unlikely to have been used.
	* src/prompt.c (do_statusbar_input): Normalize the indentation.
	* src/winio.c: Normalize some whitespace.
	* Makefile.am, nano.spec.in: Stop distributing the BUGS file.
	* BUGS: Remove obsolete file; bugs are tracked on Savannah nowadays.
	* configure.ac: Silence a useless warning about ignoring datarootdir.

2014-06-25  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (do_browser): Allow 'firstfile' and 'lastfile' to be
	rebound to Ctrl keys -- checking meta_key is wrong, the function has
	already been determined, that is all that matters.
	* src/help.c (do_help): Same thing for 'firstline'/'lastline'.

2014-06-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.h, src/move.c (do_up, do_down), src/winio.c (edit_scrol):
	Rename UP_DIR and DOWN_DIR to UPWARD and DOWNWARD, for clarity.
	* src/proto.h, src/global.c, src/search.c: Rename 'no_replace_void()'
	to 'flip_replace_void()', to show what it actually does.
	* doc/man/nanorc.5, doc/texinfo/nano.texi: Update the docs for that.